--- a/Security/build.gradle
+++ b/Security/build.gradle
@@ -13,6 +13,10 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.61'
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
