--- a/Security/build.gradle
+++ b/Security/build.gradle
@@ -13,7 +13,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    
+
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.61'
     
